# pr-guardian

./: .gitignore  .pr-guardian.yml  README.md  pyproject.toml
src/pr_guardian/: context_builder.py  diffparse.py  github_api.py  main.py  models.py  policy.py
src/pr_guardian/llm/: __init__.py  base.py  client.py  prompts.py  schema.py
src/pr_guardian/llm/providers/: __init__.py  glm.py  kimi.py  minimax.py  openai.py
src/pr_guardian/report/: __init__.py  github_reporter.py
src/pr_guardian/rules/: __init__.py  affected_tests.py  base.py  changelog_breaking.py  lockfile_consistency.py  min_permissions.py  secrets_scan.py
tests/: test_affected_tests_rule.py  test_changelog_breaking_rule.py  test_context_builder.py  test_diffparse.py  test_github_api.py  test_github_reporter.py  test_llm_providers.py  test_lockfile_consistency_rule.py  test_min_permissions_rule.py  test_policy.py  test_rules_base.py  test_secrets_scan_rule.py
